style.css
/* Set the background color of the body */
body {
	background-color: #f2f2f2;
}

/* Style the header */
.header {
	background-color: #333;
	color: rgb(255, 255, 255);
	padding: 20px;
	text-align: center;
}

/* Style the search bar */
#search-bar {
	width: 50%;
	padding: 12px 20px;
	margin: 8px 0;
	box-sizing: border-box;
	border: 2px solid #ccc;
	border-radius: 4px;
	background-color: #f8f8f8;
	font-size: 16px;
}

/* Style the container */
.container {
	padding: 1rem;
	display: flex;
	justify-content: center;
}

/* Style the champion grid */
.champion-grid {
	display: grid;
	grid-template-columns: repeat(7, 1fr);
	grid-auto-rows: 100px;
	transition: all 0.3s ease-in-out;
  }
  
  .champion-tile {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	text-align: center;
	grid-row: span 2;
	grid-column: span 1;
	transition: all 0.3s ease-in-out;
  }
  
  .hidden {
	opacity: 0;
	transform: translateY(-20px) translateX(-200%);
	transition: all 0.3s ease-in-out;
	pointer-events: none;
  }

